# sl_assignment

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/common/: commandsName.h  common.h  console.h
src/custom/: CMakeLists.txt  custom.cpp  custom.h  manager.cpp  manager.h
src/message/: message.h
src/server/: CMakeLists.txt  custom.cpp  custom.h  interpreter.cpp  interpreter.h  main.cpp  manager.cpp  manager.h  processor.cpp  processor.h  server.cpp  server.h
src/server/commands/: command.h  createCustomCommand.cpp  createCustomCommand.h  customsListCommand.cpp  customsListCommand.h  printCommand.cpp  printCommand.h  retrieveCustomCommand.cpp  retrieveCustomCommand.h
